--- a/journal/202101.md
+++ b/journal/202101.md
@@ -262,8 +262,6 @@ Early stage venture firm [Inflection](https://www.inflection.xyz/) closed their 
 
 ## Outreach
 
-{ overview of outreach/communications/marketing/PR activity for past month and any short-term plans }
-
 Monde PR's achievements for January:
 
 - created/pitched 2 stories to finance and crypto publications
@@ -288,7 +286,6 @@ Attended:
 
 Selected articles:
 
-- {}
 - https://blockcommons.red/post/dcr-on-chain-2/
 - https://blockcommons.red/post/ppcc-changelog-2020/ { this deserves its own paragraph and a mention of a couple highlihgts https://twitter.com/RichardRed0x/status/1346160647923511297 }
 
@@ -301,11 +298,7 @@ Videos:
 - The Decred DEX - A better DEX design? with Jake Yocom-Piatt and Nick Gregory for Coinscrum ([youtube](https://www.youtube.com/watch?v=uqhaz55dFRQ), slightly shorter version was [reuploaded](https://www.youtube.com/watch?v=dTjw-Ff-CgI) in Feb)
 - Decred governance walkthrough feat. on-chain analyst Checkmate ([youtube](https://www.youtube.com/watch?v=1QiC0btcf7E))
 
-Audio:
-
-- {}
-
-Art/Fun:
+Art and fun:
 
 - https://twitter.com/decredproject/status/1353780294013353986
 - What did [you do](https://twitter.com/exitusdcr/status/1348385341338742784) for the Decred DAO?
@@ -317,17 +310,12 @@ Translations:
 - [The Decred structure](https://stakey.club/en/the-decred-structure/) - [in Spanish](https://medium.com/decred-es/la-estructura-de-decred-ad6e56794815) by @francov\_
 - Decred Journal December 2020 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4), Chinese (@Dominic), and Spanish (@francov\_). Thank you all for your persistence!
 
-Other non-English content:
-
-- {}
-
 ## Community Discussions
 
 Comm systems news:
 
 - https://twitter.com/decredproject/status/1348382377127665665
-
-{ selected discussed topics, as bullet list or one paragraph per topic }
+- { matrix takedown, f-droid alternative }
 
 Selected Reddit posts:
 
