write up some research highlights

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -236,9 +236,7 @@ Nodes: Throughout [January](https://charts.dcr.farm/d/000000014/nodes?orgId=1&fr
 
 Decred's Lightning Network had 28 nodes (+4), 47 channels (+5) with a total capacity of 8.3 DCR (-0.4), as of Feb 1. @jholdstock's network map has moved to a new domain: [ln-map.jholdstock.uk](https://ln-map.jholdstock.uk/). LN capacity is becoming more important as more LN features are exposed to end users via Decrediton GUI. Thank you to all LN operators for [running the nodes](https://docs.decred.org/lightning-network/overview/)!
 
-{ any interesting analysis or events in the network }
-
-- https://blockcommons.red/post/dcr-on-chain-2/
+In his second blockchain analysis [report](https://blockcommons.red/post/dcr-on-chain-2/) @richardred followed how the freshly mined coins are flowing through mining pools, their miners and eventually hitting exchange addresses, while buying tickets is less common. The report updates on the progress of developing the tooling, and shares visualizations of address/transaction clusters and the flow of funds. { any best discoveries to mention? }
 
 ## Integrations
 
@@ -335,8 +333,7 @@ In January DCR was trading between USD 39.80-69 / BTC 0.0013-0.0020. The average
 
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
-- https://ournetwork.substack.com/p/our-network-issue-56 { BTC break even levels and more }
-  - https://twitter.com/_Checkmatey_/status/1355296688026447873
+Decred update in Our Network newsletter [issue 56](https://ournetwork.substack.com/p/our-network-issue-56) by @Checkmate and @PermabullNino [highlights](https://twitter.com/_Checkmatey_/status/1355296688026447873) the highest ever inflow of DCR into tickets that supported a doubling in DCR/BTC price. Analysis of price at which DCR was staked shows that only 17% of all staking occurred above $40, suggesting that stakers are in a reasonable profit in USD terms. DCR/BTC breakeven level for stakers is estimated around 0.004 BTC, above which ~60% of all stakers will be in profit.
 
 [DCRDEX](https://dex.decred.org/) has traded a total of 1.3M DCR and 1.9K BTC over almost 4 months since launch. On average that is roughly 12K DCR / 17 BTC per 24 hours.
 
