spell and grammer

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -25,7 +25,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
 
-January's updates to dcrd are a good example what users building [from source](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c) can get today without waiting for the next release.
+January's updates to dcrd are a good example of what users building [from source](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c) can get today without waiting for the next release.
 
 **[dcrd](https://github.com/decred/dcrd)**
 
@@ -44,7 +44,7 @@ Other changes:
 - added TLS client [authentication](https://github.com/decred/dcrd/pull/2482) using client certificates (more flexible than user+password)
 - added [RSA](https://github.com/decred/dcrd/pull/2551) 4096 bit key support to gencerts tool
 - new commands to [invalidate](https://github.com/decred/dcrd/pull/2536) arbitrary blocks and reconsider arbitrary blocks for validation (allows easier testing and smoother upgrades in the future)
-- prevent [duplicate](https://github.com/decred/dcrd/pull/2563) pending connections to same IP address and port
+- prevent [duplicate](https://github.com/decred/dcrd/pull/2563) pending connections to the same IP address and port
 - miscellaneous updates to test code, logging, docs, dependencies, minor fixes, etc
 
 A total of 47 PRs from 10 contributors were [merged](https://github.com/decred/dcrd/pulls?q=is%3Apr+merged%3A2021-01-01..2021-01-31+sort%3Aupdated-asc), adding 12K and deleting 7K lines of code.
@@ -58,13 +58,13 @@ In progress:
 - VSP client was [rewritten](https://github.com/decred/dcrwallet/pull/1956) to improve background processing and support recovery of fee payment information after seed restores { better translation to User-English is welcome, I didn't quite grasp the first design goal of 1956 }
 - narrow [rules](https://github.com/decred/dcrwallet/pull/1961) of what is considered a possible CoinJoin (used when detecting wallet's mixed account during recovery from seed)
 
-The above changes were also backported to v1.6 release.
+The above changes were also backported to the v1.6 release.
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
 - new page showing a list of [unspent](https://github.com/decred/decrediton/pull/3098) outputs (UTXOs)
 - show VSPs in [random](https://github.com/decred/decrediton/pull/3114) order
-- update [ticket status](https://github.com/decred/decrediton/pull/3121) on starts, restarts and seed restores
+- update [ticket status](https://github.com/decred/decrediton/pull/3121) on starts, restarts, and seed restores
 - remove usage of [CSRF](https://github.com/decred/decrediton/pull/3133) tokens when communicating to Politeia, to prevent privacy leaks
 - [auto-detect](https://github.com/decred/decrediton/pull/3033) if the wallet used mixing in the past
 - UI hints for [RFP](https://github.com/decred/decrediton/pull/3118) proposals and submissions
@@ -73,7 +73,7 @@ The above changes were also backported to v1.6 release.
 - more automated [UI tests](https://github.com/decred/decrediton/pull/2659)
 - ~24 bug fixes and 3 UI tweaks
 
-Most of the above changes were included in v1.6 release and the rest will land in v1.6.1 patch release.
+Most of the above changes were included in the v1.6 release and the rest will land in the v1.6.1 patch release.
 
 **[Politeia](https://github.com/decred/politeia)**
 
@@ -121,14 +121,14 @@ Merged work:
 - support [switching](https://github.com/decred/dcrdex/pull/901) from unencrypted to an encrypted BTC wallet
 - client-side fee rate [limits](https://github.com/decred/dcrdex/pull/874)
 - sample [config](https://github.com/decred/dcrdex/pull/927) files
-- validate max [fee rate](https://github.com/decred/dcrdex/pull/898) at match time to partially prevent the server from maliciously assigning too high fee
-- fixed several issues with address validation, wallet locking, login, etc, and backported them to v0.1.4 release
+- validate max [fee rate](https://github.com/decred/dcrdex/pull/898) at match time to partially prevent the server from maliciously assigning too high a fee
+- fixed several issues with address validation, wallet locking, login, etc, and backported them to the v0.1.4 release
 
 A total of 32 PRs from 7 contributors were [merged](https://github.com/decred/dcrdex/pulls?q=is%3Apr+merged%3A2021-01-01..2021-01-31+sort%3Aupdated-asc), adding 3K and deleting 1K lines of code.
 
 Check the [second](https://proposals.decred.org/proposals/d462ac3) proposal for a big picture plan of what's coming in the next 9 months. In addition, [this tweet](https://twitter.com/behindtext/status/1355478387721187328) hinted at a possible integration of privacy on the DCR side of trading.
 
-Congratulations to DCRDEX team with the stunning 98% Yes votes!
+Congratulations to the DCRDEX team with the stunning 98% Yes votes!
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
@@ -206,11 +206,11 @@ Some irregular changes among the tracked [stats](https://github.com/decredcommun
 
 ## Governance
 
-In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 11,878 DCR and spent 6,750 DCR. Using January's daily average DCR/USD rate of $54.25, this is $644K received and $366K spent. At December's average daily rate of $31.07, the USD figure billed for past work is $210K. As of Feb 4, Treasury balance is 645,642 DCR (51.6 million USD at $80.00).
+In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 11,878 DCR and spent 6,750 DCR. Using January's daily average DCR/USD rate of $54.25, this is $644K received and $366K spent. At December's average daily rate of $31.07, the USD figure billed for past work is $210K. As of Feb 4, the Treasury balance is 645,642 DCR (51.6 million USD at $80.00).
 
 Four proposals were submitted in January, with {insert latest status at publication}. 
 
-- DCRDEX Phase 2 development [proposal](https://proposals.decred.org/proposals/d462ac3) set new records in terms of support from the ticket pool, with 53% of the eligible tickets turning out to vote almost unanimously yes (98.2%)! This proposal approved a budget of $245,000 to develop a set of features including support for SPV wallets, ETH and ERC-20 token trading, Bitcoin forks and Decrediton integration.
+- DCRDEX Phase 2 development [proposal](https://proposals.decred.org/proposals/d462ac3) set new records in terms of support from the ticket pool, with 53% of the eligible tickets turning out to vote almost unanimously yes (98.2%)! This proposal approved a budget of $245,000 to develop a set of features including support for SPV wallets, ETH and ERC-20 token trading, Bitcoin forks, and Decrediton integration.
 
 - Decred in Depth podcast is going to be under new management, and doing it live, after a [proposal](https://proposals.decred.org/proposals/391108e) from @elima\_iii was approved with 86.3% approval and 28% turnout - this covers 24-36 episodes at $500/episode.
 
@@ -246,17 +246,17 @@ Unresponsive VSPs [decred.everstake.one](https://decred.everstake.one) and [dcrp
 
 As of writing 10 out of 17 VSPs have upgraded to [vspd](https://github.com/decred/vspd). VSP operators please be aware that users of Decrediton v1.6 will see the list of new vspd instances as a recommended option, which means VSPs that upgrade sooner may steal some users from the slower ones!
 
-Brazilian [Monnos](https://monnos.com/) announced the [addition](https://twitter.com/MonnosGlobal/status/1351212798739669004) of DCR to their portfolio. The platform allows to trade crypto for BRL fiat, copy strategies of other traders ("social trading") and plans to issue crypto payment cards. As of writing DCR deposits are [not available](https://monnos.com/en/fees-and-limits/) but buying, trading and withdrawing might work.
+Brazilian [Monnos](https://monnos.com/) announced the [addition](https://twitter.com/MonnosGlobal/status/1351212798739669004) of DCR to their portfolio. The platform allows to trade crypto for BRL fiat, copy strategies of other traders ("social trading"), and plans to issue crypto payment cards. As of writing DCR deposits are [not available](https://monnos.com/en/fees-and-limits/) but buying, trading, and withdrawing might work.
 
 Nigerian [First Kudi](https://firstkudi.com/) [announced](https://twitter.com/firstkudiapp/status/1353729854697582598) that DCR was added to their new [First Kudi Pro](https://first-kudi.medium.com/introducing-first-kudi-pro-2b8d30f85d08) platform that allows trading crypto to NGN fiat and USDT/GUSD stablecoins.
 
-Binance had DCR deposits and withdrawals disabled for [30+ hours](https://twitter.com/behindtext/status/1354389277870845959) rougly 12 hours after v1.6 was released.
+Binance had DCR deposits and withdrawals disabled for [30+ hours](https://twitter.com/behindtext/status/1354389277870845959) roughly 12 hours after v1.6 was released.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
 ## Adoption
 
-Early stage venture firm [Inflection](https://www.inflection.xyz/) closed their [second fund](https://twitter.com/alexlangevc/status/1346409341004509184) with DCR being one of the assets. Their homepage defines Decred as "Internet nation and governance platform".
+Early stage venture firm [Inflection](https://www.inflection.xyz/) closed their [second fund](https://twitter.com/alexlangevc/status/1346409341004509184) with DCR being one of the assets. Their homepage defines Decred as an "Internet nation and governance platform".
 
 ## Outreach
 
@@ -365,9 +365,9 @@ Reddit subreddit /r/wallstreetbets broke into the [mainstream](https://www.bloom
 
 Elon Musk was [credited](https://www.coindesk.com/bitcoin-price-falls-retraces-elon-musk-twitter) with pumping the BTC price after he tweeted support for Bitcoin, and later [repeated](https://twitter.com/elonmusk/status/1357231313376456708) the same trick with Dogecoin, presumably for his own amusement.
 
-Microblogging service Parler has tested a new level of censorship in January. Taking down of apps from Google and Apple stores was not surprising, but a quick deplatforming from third party 2FA/identity/database services and ultimately Amazon Web Services showed pretty much everything that can go wrong when centralized solutions are naively used to build a less censored environment. Hopefully developers and node operators can learn from this and prepare for such events in advance.
+Microblogging service Parler has tested a new level of censorship in January. Taking down of apps from Google and Apple stores was not surprising, but a quick deplatforming from third party 2FA/identity/database services and ultimately Amazon Web Services showed pretty much everything that can go wrong when centralized solutions are naively used to build a less censored environment. Hopefully, developers and node operators can learn from this and prepare for such events in advance.
 
-Google [suspended](https://twitter.com/element_hq/status/1355290296947499013) Element app without notice and upon clarification their representative [explained](https://twitter.com/element_hq/status/1355663753380032512) that "the suspension was triggered by a report of extremely abusive content accessible on the matrix.org server". As usual in such cases, the exact instance of content is not referenced for public's verification that the strike was fair. The app was restored ~1 hour later. A more positive interpretation is this was a gentle reminder to reduce dependency on the ephemeral Google Play, and use [F-Droid](https://f-droid.org/en/packages/im.vector.app/) builds or self-hosted APKs instead.
+Google [suspended](https://twitter.com/element_hq/status/1355290296947499013) Element app without notice and upon clarification their representative [explained](https://twitter.com/element_hq/status/1355663753380032512) that "the suspension was triggered by a report of extremely abusive content accessible on the matrix.org server". As usual in such cases, the exact instance of content is not referenced for the public's verification that the strike was fair. The app was restored ~1 hour later. A more positive interpretation is this was a gentle reminder to reduce dependency on the ephemeral Google Play, and use [F-Droid](https://f-droid.org/en/packages/im.vector.app/) builds or self-hosted APKs instead.
 
 Good news for censorship fighters, the [youtube-dl](https://github.com/ytdl-org/youtube-dl) repository that was taken down via RIAA's request, was restored after an impressive [push back](https://torrentfreak.com/riaas-youtube-dl-takedown-ticks-of-developers-and-githubs-ceo-201027/) involving creative ways to share censored code.
 
