--- a/journal/202101.md
+++ b/journal/202101.md
@@ -175,7 +175,7 @@ To enable the above features, mixing and Politeia support were added to the [dcr
 
 **[Decred Address Scanner](https://github.com/JoeGruffins/dcraddrscanner)**
 
-Version 1.06 has been released with a new database structure and ticket watching abilities. It is available on [Google Play](https://play.google.com/store/apps/details?id=com.joegruff.decredaddressscanner) as a direct APK download on [GitHub](https://github.com/JoeGruffins/dcraddrscanner/releases).
+Version 1.06 has been released with a new database structure and ticket watching abilities. It is available on [Google Play](https://play.google.com/store/apps/details?id=com.joegruff.decredaddressscanner) and as a direct APK download on [GitHub](https://github.com/JoeGruffins/dcraddrscanner/releases).
 
 Status as of Jan 20 [update](https://github.com/decredcommunity/proposals/blob/master/proposals/3943bff/updates/20210120.md):
 
@@ -184,7 +184,7 @@ Status as of Jan 20 [update](https://github.com/decredcommunity/proposals/blob/m
 - compact filter support is in progress but it needs a lot of work (this is the most privacy-preserving way to obtain address information, same way as used by the SPV mode of the other wallets)
 - the project has chosen [Blue Oak](https://blueoakcouncil.org/license/1.0.0) license
 
-Other:
+**Other**
 
 - [dcrseeder](https://github.com/decred/dcrseeder) received fixes for [peer](https://github.com/decred/dcrseeder/pull/43) tracking and graceful [shutdown](https://github.com/decred/dcrseeder/pull/41)
 - [release](https://github.com/decred/release) tool was updated to v1.6 and used by multiple developers to reproduced release builds
