--- a/journal/202101.md
+++ b/journal/202101.md
@@ -332,12 +332,12 @@ Translations:
 
 Comm systems news:
 
-- https://twitter.com/decredproject/status/1348382377127665665
-- { matrix takedown, f-droid alternative }
+- Element app (Android client for the Matrix chat protocol used by Decred community) was temporarily [taken down](https://twitter.com/element_hq/status/1355290296947499013) from Google Play Store. [F-Droid](https://f-droid.org/en/packages/im.vector.app/) version is less vulnerable to such incidents.
+- Signal users can show their [love](https://twitter.com/decredproject/status/1348382377127665665) for Stakey by installing a special [sticker pack](https://signal.art/addstickers/#pack_id=ba8c921e5bf3d132e77ddf53419ea3c1&pack_key=a0e0deb45d65777d21dd8e98af09b946241073210fba562e55f574f14b790838)
 
 Selected Reddit posts:
 
-- https://www.reddit.com/r/decred/comments/kxssw5/márcio_siqueira_on_twitter_a_651_billion/
+- Decred was mentioned in a report on central bank issued stablecoins published by a large holding corporation [MetLife](https://www.reddit.com/r/decred/comments/kxssw5/márcio_siqueira_on_twitter_a_651_billion/)
 - how Dash's marketing expenses [compare](https://www.reddit.com/r/decred/comments/l61ggx/dash_treasury_a_glimpse_at_greatness_or_a/) to Decred's
 - "If you could change [one thing](https://www.reddit.com/r/decred/comments/kx201g/if_you_could_change_one_thing_in_how_decred_was/) in how Decred was made, what would it be?"
 - what the [future](https://www.reddit.com/r/decred/comments/kpzieu/any_good_threadslinks_on_what_the_future_of/) of Politeia could look like
@@ -400,7 +400,7 @@ Elon Musk was [credited](https://www.coindesk.com/bitcoin-price-falls-retraces-e
 
 Microblogging service Parler has tested a new level of censorship in January. Taking down of apps from Google and Apple stores was not surprising, but a quick deplatforming from third party 2FA/identity/database services and ultimately Amazon Web Services showed pretty much everything that can go wrong when centralized solutions are naively used to build a less censored environment. Hopefully, developers and node operators can learn from this and prepare for such events in advance.
 
-Google [suspended](https://twitter.com/element_hq/status/1355290296947499013) Element app without notice and upon clarification their representative [explained](https://twitter.com/element_hq/status/1355663753380032512) that "the suspension was triggered by a report of extremely abusive content accessible on the matrix.org server". As usual in such cases, the exact instance of content is not referenced for the public's verification that the strike was fair. The app was restored ~1 hour later. A more positive interpretation is this was a gentle reminder to reduce dependency on the ephemeral Google Play, and use [F-Droid](https://f-droid.org/en/packages/im.vector.app/) builds or self-hosted APKs instead.
+Google [suspended](https://twitter.com/element_hq/status/1355290296947499013) Element app without notice and upon clarification their representative [explained](https://twitter.com/element_hq/status/1355663753380032512) that "the suspension was triggered by a report of extremely abusive content accessible on the matrix.org server". As usual in such cases, the exact instance of content is not referenced for the public's verification that the strike was fair. The app was restored ~1 hour later. A more positive interpretation is this was a gentle reminder to reduce dependency on the ephemeral Google Play, and use [F-Droid](https://f-droid.org/en/packages/im.vector.app/) builds or self-hosted [APKs](https://twitter.com/element_hq/status/1355331704781742082) instead.
 
 Good news for censorship fighters, the [youtube-dl](https://github.com/ytdl-org/youtube-dl) repository that was taken down via RIAA's request, was restored after an impressive [push back](https://torrentfreak.com/riaas-youtube-dl-takedown-ticks-of-developers-and-githubs-ceo-201027/) involving creative ways to share censored code.
 
