--- a/journal/202101.md
+++ b/journal/202101.md
@@ -378,13 +378,13 @@ Light wallets based on compact filters talk to full nodes without middlemen and 
 
 American miner Marathon Patent Group joined DMG Blockchain Solutions to [create](https://www.marathonpg.com/news/press-releases/detail/1220/marathon-patent-group-and-dmg-blockchain-solutions-to-form) a "cooperative mining pool". To benefit the industry, the pool will include "clean block mining" proprietary tech that will "specifically omit any transactions deemed risky by Walletscore, and which may not meet OFAC standards". r/Bitcoin [discussed](https://www.reddit.com/r/Bitcoin/comments/kqyg0l/a_2nd_american_miner_marathon_patent_group_is/) possible countermeasures and claims made by the companies.
 
-Firo (formerly Zcoin) 51% https://twitter.com/firoorg/status/1351703001849757697 { better link? }
+Firo (formerly Zcoin) 51% https://twitter.com/firoorg/status/1351703001849757697 { please write up if interesting and if there is time, else drop }
 
 BitMEX Research caused a stir when they [tweeted](https://twitter.com/BitMEXResearch/status/1351855414103715842) that Bitcoin had experienced a small double-spend. It was helpfully clarified [by Hasu](https://insights.deribit.com/market-research/was-there-a-bitcoin-double-spend-on-jan-20-2021/) and others that this was not a malicious double-spend attack but rather a benign event where a user happened to be bumping the fee on their transaction when a stale block occurred and the original transaction was expunged from the blockchain.
 
 { governance, funding, chain forks, community splits }
 
-Yearn Finance [voted](https://snapshot.page/#/yearn/proposal/QmX8oYTSkaXSARYZn7RuQzUufW9bVVQtwJ3zxurWrquS9a) to [inflate](https://www.coindesk.com/yearn-finance-votes-to-inflate-yfi-token-supply-by-20) the YFI supply by 20% to fund future development, YFI has been heralded for its "fair launch" which put all tokens in the hands of liquidity miners, but now they have voted to dedicate 20% to development some months later. As part of the run-up to the vote lead Yearn Finance developer Andre Cronje [wrote](https://andrecronje.medium.com/building-in-defi-sucks-part-2-75df9ee7871b) about how building in defi sucks. 
+Yearn Finance [voted](https://snapshot.page/#/yearn/proposal/QmX8oYTSkaXSARYZn7RuQzUufW9bVVQtwJ3zxurWrquS9a) to [inflate](https://www.coindesk.com/yearn-finance-votes-to-inflate-yfi-token-supply-by-20) the YFI supply by 20% to fund future development. YFI has been heralded for its "fair launch" which put all tokens in the hands of liquidity miners, but now they have voted to dedicate 20% to development some months later. As part of the run-up to the vote lead Yearn Finance developer Andre Cronje [wrote](https://andrecronje.medium.com/building-in-defi-sucks-part-2-75df9ee7871b) about how building in defi sucks. 
 
 { DEX }
 
@@ -394,13 +394,13 @@ Tether has [printed](https://www.coindesk.com/tether-mints-record-2b-usdt-in-one
 
 { other: regulations, privacy, security, fun }
 
-Reddit subreddit /r/wallstreetbets broke into the [mainstream](https://www.bloomberg.com/news/articles/2021-02-01/gamestop-short-interest-plummets-in-a-sign-traders-are-covering) with a retail-powered short squeeze that attracted global press coverage and cost the hedge funds which were caught out $20 billion, before Robinhood and the other platforms which had enabled it [pulled the rug](https://www.cnbc.com/2021/01/28/robinhood-interactive-brokers-restrict-trading-in-gamestop-s.html) by preventing users from opening new positions.
+Reddit subreddit r/wallstreetbets broke into the [mainstream](https://www.bloomberg.com/news/articles/2021-02-01/gamestop-short-interest-plummets-in-a-sign-traders-are-covering) with a retail-powered short squeeze that attracted global press coverage and cost the hedge funds which were caught out $20 billion, before Robinhood and the other platforms which had enabled it [pulled the rug](https://www.cnbc.com/2021/01/28/robinhood-interactive-brokers-restrict-trading-in-gamestop-s.html) by preventing users from opening new positions.
 
 Elon Musk was [credited](https://www.coindesk.com/bitcoin-price-falls-retraces-elon-musk-twitter) with pumping the BTC price after he tweeted support for Bitcoin, and later [repeated](https://twitter.com/elonmusk/status/1357231313376456708) the same trick with Dogecoin, presumably for his own amusement.
 
-Microblogging service Parler has tested a new level of censorship in January. Taking down of apps from Google and Apple stores was not surprising, but a quick deplatforming from third party 2FA/identity/database services and ultimately Amazon Web Services showed pretty much everything that can go wrong when centralized solutions are naively used to build a less censored environment. Hopefully, developers and node operators can learn from this and prepare for such events in advance.
+Microblogging service Parler has tested a new level of censorship in January. Taking down of apps from Google and Apple stores was not surprising, but a quick deplatforming from third party 2FA, identity, database providers and ultimately Amazon Web Services, showed pretty much everything that can go wrong when centralized solutions are naively used to build a less censored environment. Hopefully, developers and node operators will learn from this and prepare for such events in advance.
 
-Google [suspended](https://twitter.com/element_hq/status/1355290296947499013) Element app without notice and upon clarification their representative [explained](https://twitter.com/element_hq/status/1355663753380032512) that "the suspension was triggered by a report of extremely abusive content accessible on the matrix.org server". As usual in such cases, the exact instance of content is not referenced for the public's verification that the strike was fair. The app was restored ~1 hour later. A more positive interpretation is this was a gentle reminder to reduce dependency on the ephemeral Google Play, and use [F-Droid](https://f-droid.org/en/packages/im.vector.app/) builds or self-hosted [APKs](https://twitter.com/element_hq/status/1355331704781742082) instead.
+Google [suspended](https://twitter.com/element_hq/status/1355290296947499013) Element app without notice and upon clarification their representative [explained](https://twitter.com/element_hq/status/1355663753380032512) that "the suspension was triggered by a report of extremely abusive content accessible on the matrix.org server". As usual in such cases, the exact instance of content was not referenced for the public's verification that the strike was fair. The app was restored ~1 hour later. A more positive interpretation is that this was a gentle reminder to reduce dependency on the ephemeral Google Play, and switch to [F-Droid](https://f-droid.org/en/packages/im.vector.app/) or self-hosted [APKs](https://twitter.com/element_hq/status/1355331704781742082).
 
 Good news for censorship fighters, the [youtube-dl](https://github.com/ytdl-org/youtube-dl) repository that was taken down via RIAA's request, was restored after an impressive [push back](https://torrentfreak.com/riaas-youtube-dl-takedown-ticks-of-developers-and-githubs-ceo-201027/) involving creative ways to share censored code.
 
