Media and drop some todos

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -55,7 +55,7 @@ In progress:
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
-- VSP client was [rewritten](https://github.com/decred/dcrwallet/pull/1956) to improve background processing and support recovery of fee payment information after seed restores { better translation to User-English is welcome, I didn't quite grasp the first design goal of 1956 }
+- VSP client was [rewritten](https://github.com/decred/dcrwallet/pull/1956) to improve background processing and support recovery of fee payment information after seed restores
 - narrow [rules](https://github.com/decred/dcrwallet/pull/1961) of what is considered a possible CoinJoin (used when detecting wallet's mixed account during recovery from seed)
 
 The above changes were also backported to the v1.6 release.
@@ -86,8 +86,6 @@ CMS:
 - improved proposal [billing](https://github.com/decred/politeiagui/pull/2275) summary
 - improved [code stats](https://github.com/decred/politeiagui/pull/2279) display
 - bug fixes
-
-{ tlog update would be nice }
 
 **[vspd](https://github.com/decred/vspd)**
 
@@ -252,7 +250,7 @@ As of Feb 10, PoS [upgrade threshold](https://voting.decred.org/) for the decent
 
 Decred's Lightning Network had 28 nodes (+4), 47 channels (+5) with a total capacity of 8.3 DCR (-0.4), as of Feb 1. @jholdstock's network map has moved to a new domain: [ln-map.jholdstock.uk](https://ln-map.jholdstock.uk/). LN capacity is becoming more important as more LN features are exposed to end users via Decrediton GUI. Thank you to all LN operators for [running the nodes](https://docs.decred.org/lightning-network/overview/)!
 
-In his second blockchain analysis [report](https://blockcommons.red/post/dcr-on-chain-2/) @richardred followed how the freshly mined coins are flowing through mining pools, their miners and eventually hitting exchange addresses, while buying tickets is less common. The report updates on the progress of developing the tooling, and shares visualizations of address/transaction clusters and the flow of funds. { any best discoveries to mention? }
+In his second blockchain analysis [report](https://blockcommons.red/post/dcr-on-chain-2/) @richardred followed how the freshly mined coins are flowing through mining pools, their miners and eventually hitting exchange addresses, while buying tickets is less common. The report updates on the progress of developing the tooling, and shares visualizations of address/transaction clusters and the flow of funds. { @rr, any best discoveries to mention? }
 
 ## Integrations
 
@@ -304,8 +302,8 @@ Attended:
 
 Selected articles:
 
-- https://blockcommons.red/post/dcr-on-chain-2/
-- https://blockcommons.red/post/ppcc-changelog-2020/ { this deserves its own paragraph and a mention of a couple highlihgts https://twitter.com/RichardRed0x/status/1346160647923511297 }
+- Decred blockchain analysis - Part 2 PoW wow by @richardred ([blockcommons.red](https://blockcommons.red/post/dcr-on-chain-2/))
+- Crypto Commons 2020 review and v1.0 changelog ([blockcommons.red](https://blockcommons.red/post/ppcc-changelog-2020/) { @rr this amount of work deserves its own paragraph mentioning a few highlihgts https://twitter.com/RichardRed0x/status/1346160647923511297 }
 
 Videos:
 
@@ -357,8 +355,6 @@ Selected Twitter discussions:
 ## Markets
 
 In January DCR was trading between USD 39.80-69 / BTC 0.0013-0.0020. The average daily rate was $54.25.
-
-{ markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
 A colorful [chart](https://twitter.com/_Checkmatey_/status/1347662655830441984) by @Checkmate shows how DCR has stopped following the 5 bigger cryptos in their decline against BTC.
 
