--- a/journal/202101.md
+++ b/journal/202101.md
@@ -372,7 +372,7 @@ Light wallets based on compact filters talk to full nodes without middlemen and 
 
 American miner Marathon Patent Group joined DMG Blockchain Solutions to [create](https://www.marathonpg.com/news/press-releases/detail/1220/marathon-patent-group-and-dmg-blockchain-solutions-to-form) a "cooperative mining pool". To benefit the industry, the pool will include "clean block mining" proprietary tech that will "specifically omit any transactions deemed risky by Walletscore, and which may not meet OFAC standards". r/Bitcoin [discussed](https://www.reddit.com/r/Bitcoin/comments/kqyg0l/a_2nd_american_miner_marathon_patent_group_is/) possible countermeasures and claims made by the companies.
 
-Firo (formerly Zcoin) 51% https://twitter.com/firoorg/status/1351703001849757697 { please write up if interesting and if there is time, else drop }
+Firo (formerly Zcoin) suffered a 51% [attack](https://twitter.com/firoorg/status/1351703001849757697) where the attacker deposited 866K FIRO to Binance , sold them for other coins which they withdrew, then broadcast about 1 day's worth of blocks which wiped out the attacker's deposits. The Firo devs responded by triggering a "Lelantus" switch that prevented the attacker from anonymising their FIRO (which was helpfully all stored in one address), and released an update which blacklisted the attacker's address and added a new rule limiting max reorg depth to 5. While the network updated the attacker and honest miners engaged in a [hash war](https://www.coindesk.com/privacy-coin-firo-currently-experiencing-51-attack), with the attacker trying to mine enough blocks to stay ahead so they could spend their ill-gotten gains.
 
 BitMEX Research caused a stir when they [tweeted](https://twitter.com/BitMEXResearch/status/1351855414103715842) that Bitcoin had experienced a small double-spend. It was helpfully clarified [by Hasu](https://insights.deribit.com/market-research/was-there-a-bitcoin-double-spend-on-jan-20-2021/) and others that this was not a malicious double-spend attack but rather a benign event where a user happened to be bumping the fee on their transaction when a stale block occurred and the original transaction was expunged from the blockchain.
 
