add media entry

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -303,7 +303,7 @@ Attended:
 Selected articles:
 
 - Decred blockchain analysis - Part 2 PoW wow by @richardred ([blockcommons.red](https://blockcommons.red/post/dcr-on-chain-2/))
-- Crypto Commons 2020 review and v1.0 changelog ([blockcommons.red](https://blockcommons.red/post/ppcc-changelog-2020/) { @rr this amount of work deserves its own paragraph mentioning a few highlihgts https://twitter.com/RichardRed0x/status/1346160647923511297 }
+- Crypto Commons 2020 review and v1.0 changelog by @richardred ([blockcommons.red](https://blockcommons.red/post/ppcc-changelog-2020/)) - The [cryptocommons.cc](https://cryptocommons.cc/) book received a major update covering selected developments from 2020, and these were also written up as a standalone blog post in the style of an annual review. The idea is that people who already read Peer Production on the Crypto Commons can get the update without reading it all again. While the full post is 18,000 words long there is also a tweet [thread](https://twitter.com/RichardRed0x/status/1346160647923511297) version that's much shorter. Regular readers of the Relevant External section will recognize many of the same stories. One of the main themes of the update is divergence of the "open source movement", with disillusionment apparently growing among people working on more corporate-dominated projects. This contrasts with the crypto space where the number of open source projects, and funding mechanisms for these, are growing in scale and diversity. While the bear market was hard for many projects and saw their efforts scaled back, others were able to continue without a care, and there are always more new forms being invented.
 
 Videos:
 
