add governance update

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -221,12 +221,11 @@ In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhN
 Four proposals were submitted in January, with {insert latest status at publication}. 
 
 - DCRDEX Phase 2 development [proposal](https://proposals.decred.org/proposals/d462ac3) set new records in terms of support from the ticket pool, with 53% of the eligible tickets turning out to vote almost unanimously yes (98.2%)! This proposal approved a budget of $245,000 to develop a set of features including support for SPV wallets, ETH and ERC-20 token trading, Bitcoin forks, and Decrediton integration.
-
 - Decred in Depth podcast is going to be under new management, and doing it live, after a [proposal](https://proposals.decred.org/proposals/391108e) from @elima\_iii was approved with 86.3% approval and 28% turnout - this covers 24-36 episodes at $500/episode.
+- A new research proposal from @ammarooni requests $17,500 to write and publish a book, [Decentralized Credits: The Digitization of Money and State](https://proposals.decred.org/proposals/9e1d644) - this proposal was narrowly rejected in early Feb, with 57% approval and record turnout of 70%. 
+- The Decred Arabia team [requested](https://proposals.decred.org/proposals/d0c32d5) $6,200 for six months' funding. This proposal was approved in early Feb with 96% support and turnout of 55%, making it the proposal with the second highest turnout (ahead of the DCRDEX phase 2 proposal).
 
-- A new research proposal from @ammarooni requests $17,500 to write and publish a book, [Decentralized Credits: The Digitization of Money and State](https://proposals.decred.org/proposals/9e1d644).
-
-- The Decred Arabia team [requested](https://proposals.decred.org/proposals/d0c32d5) $6,200 for six months' funding. 
+It looks like the surge in ticket price and PoS participation has also resulted in an increased level of Politeia engagement on the part of the people who hold tickets.
 
 A further two proposals were submitted in early February, for [Decred Journal 2021](https://proposals.decred.org/proposals/1d74b88) (max budget $39,000) and [Open Source Research 2021](https://proposals.decred.org/proposals/020b8b0) (max budget $40,000). The Decred Journal proposal offers an opportunity to leave more formal and immutable feedback than usual, and you can also (if you've got tickets) vote to continue funding the Journal!
 
