--- a/journal/202101.md
+++ b/journal/202101.md
@@ -10,16 +10,29 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 - a batch of outreach and research proposals are up for discussion
 - Decred 5 years soon
 
-## v1.6 Release
+## Hidden Hydra is here!
 
-{ links, verify binaries reminder, bold remind to set treasury vote prefs, bold remind to migrate to vspd }
+The long-awaited v1.6 aka Hidden Hydra is finally here! This is probably the biggest upgrade in Decred's history with several major and numerous smaller upgrades across all software projects. All changes are listed in the detailed release notes so here we will only highlight the big ones:
 
-{ maybe key release highlights }
+- **Private transactions** are now accessible through a graphical user interface Decrediton. It works by mixing coins and making it hard to impossible to trace them and spy on your balance or activity. This feature is critical for protecting the privacy of regular users and especially voters, whose privacy improves security of the entire network. It also protects the fungibility principle of Decred [Constitution](https://docs.decred.org/governance/decred-constitution/). The chosen implementation (CoinShuffle++) has the beautiful properties of keeping coin supply auditable at all times, relying on simple cryptography and achieving high privacy thanks to smart integration with the staking system and large mixing volume.
 
-- https://voting.decred.org/
-- https://explorer.dcrdata.org/agenda/treasury
+- **New VSP architecture** greatly improves experience of using Voting Service Providers, which are used by roughly half of all voters that don't run voting wallets 24/7. No accounts to create and remember, no redeem scripts to back up, no email to share, no addresses reused, and optional mixing support - all make staking easier and more private.
 
-{ 1.6.1 soon }
+- **Decentralized treasury control** will transfer the power to approve or reject spending from the Treasury into the hands of Decred stakeholders. The required consensus algorithm changes will be voted on in the coming months and activate if approved.
+
+- **Secure, private and fair exchange** where you control the keys at all times and the exchange never holds any coins. Private information is protected in the best way possible - by not collecting it. Unfair front-running and high-frequency trading is prevented by pseudo-random order matching. Trading volume is expensive to fake and there are no trading fees. Currently using DCRDEX requires some technical skills but this will be simplified in the next releases.
+
+And here are the high level steps to upgrade:
+
+- check out the new [release page](https://decred.org/release/) for an overview of new features and download links, or watch the video [overview](https://www.youtube.com/watch?v=3AxBa-EE8RM) (v1.6 features start at 21:00)
+- [verify](https://docs.decred.org/advanced/verifying-binaries/) the downloads _(the routine is not fun but it ensures the files have not been tampered with!)_
+- read the [release notes](https://github.com/decred/decred-binaries/releases/tag/v1.6.0) and pay attention to downgrade warnings - it will not be possible to use previous versions after blockchain and wallet files have been upgraded
+- learn how to migrate to the new VSP staking system { any good user friendly link? or is it all obvious in Decrediton? }
+- learn about mixing with @Exitus' short [video tutoral](https://www.youtube.com/watch?v=QC65PBNwAK4)
+- set your [vote choice](https://docs.decred.org/governance/consensus-rule-voting/how-to-vote/) for the upcoming consensus rule change vote to enable decentralized treasury { I wish we had a user friendly link explaining how it works, maybe https://proposals.decred.org/proposals/c96290a ? }. If you're new to Decred governance, see @Checkmate's quick governance [walkthrough](https://www.youtube.com/watch?v=1QiC0btcf7E) video.
+- watch network's upgrade and consensus vote progress [here](https://voting.decred.org/) or [here](https://explorer.dcrdata.org/agenda/treasury)
+
+There are some [known issues](https://www.reddit.com/r/decred/comments/lebx71/error_when_trying_to_purchase_tickets_with/) to be aware of in Decrediton v1.6.0 that will be fixed in the upcoming patch release.
 
 ## Development
 
